--- a/public/navigation_css/admin.css
+++ b/public/navigation_css/admin.css
@@ -91,12 +91,19 @@
     cursor: pointer;
     transition: .2s;
 }
+.nav-item.active{
+    background-color: #ECF3FF;
+}
+.nav-item.active:hover{
+    background-color: #ECF3FF !important;
+    cursor: unset;
+}
 .nav-item:hover{
     background-color: rgb(245, 245, 245);
 }
-.nav-item:active{
+/* .nav-item:active{
     background-color: rgb(230, 230, 230);
-}
+} */
 .nav-item-last{
     display: flex;
     flex: 1;
@@ -173,7 +180,10 @@
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.5);
 }
-
+.msgr-box-right{
+    height: 100%;
+    width: calc(100vw - 320px);
+}
 @keyframes shadow-in {
     0% {
         /* background-color: transparent; */
@@ -506,14 +516,18 @@
 .msg-box{
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
-    cursor: pointer;
 }
 .msg-box:hover .more-option{
     display: flex;
 }
-.msg-box:hover{
-    background-color: rgb(245, 245, 245);
+.msg-box.active{
+    display: flex;
+    flex-direction: column;
+    background-color: #ECF3FF;
+    border-radius: 10px;
+}
+.msg-box.active:hover{
+    background-color: #ECF3FF;
 }
 .box-top{
     height: 65px;
@@ -521,8 +535,9 @@
     display: flex;
     align-items: center;
     padding: 8px;
+    border-radius: 10px;
+    cursor: pointer;
 }
-
 .user-box{
     height: fit-content;
     display: flex;
@@ -822,13 +837,15 @@ li.message__user.message__user:hover .message__user__name__options {
 
 @keyframes showtrash {
     0% {
+        padding: 0;
         height: 0;
         opacity: 0;
         /* border-top: 0px rgba(0, 0, 0, 0.05) solid; */
     }
 
     100% {
-        height: 30px;
+        padding: 8px;
+        height: 53px;
         opacity: 1;
         /* border-top: 1px rgba(0, 0, 0, 0.05) solid; */
     }
@@ -836,7 +853,7 @@ li.message__user.message__user:hover .message__user__name__options {
 
 @keyframes hidetrash {
     0% {
-        height: 30px;
+        height: 53px;
         opacity: 1;
         /* border-top: 1px rgba(0, 0, 0, 0.05) solid; */
     }
@@ -943,8 +960,7 @@ li.message__user.message__user:hover .message__user__name__options {
 
 
 .chatbox {
-    max-width: 100%;
-    width: calc(100% - 320px);
+    width: 100%;
     /* box-shadow: none;
     background-color: rgb(255, 255, 255); */
     border: none;
@@ -1375,7 +1391,7 @@ th.th__show{
         width: max-content;
     }
 
-    .list-message-box {
+    .msgr-box-left {
         width: unset;
         width: 100vw;
         width: 100svw;
