--- a/public/navigation_css/shop.css
+++ b/public/navigation_css/shop.css
@@ -1,29 +1,372 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+    box-sizing: border-box;
+}
+.unavailable{
+    height: 100vh;
+    height: 100svh;
+    width: 100vw;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.unavailable-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: fit-content;
+    width: fit-content;
+    margin-left: 20px;
+}
+.unavailable-wrapper img{
+    height: 100px;
+}
+.unavailable-wrapper p{
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+}
+.unavailable-wrapper span{
+    font-size: 14px;
+    color: #999;
+
+}
+.unavailable-wrapper button{
+    padding: 6px 12px;
+    border: none;
+    color: #fff;
+    background-color: rgb(0, 153, 255);
+    border-radius: 3px;
+    cursor: pointer;
+}
+.unavailable-wrapper button:hover{
+    background-color: rgb(0, 132, 255);
+}
+
+.header{
+    position: fixed;
+    background-color: #fff;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    height: 110px;
+    width: 100%;
+    background-color: #ffffff;
+    background-image: url(../img/icon/background_shopz.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header-wrapper{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    max-width: 1200px;
+    width: 100%;
+}
+.header-logo{
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.header-logo-wrapper{
+    height: 100%;
+    width: fit-content;
+    padding: 10px;
+    cursor: pointer;
+}
+.header-logo-wrapper img{
+    height: 100%;
+    width: fit-content;
+    object-fit: cover;
+}
+.header-content{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.header-top{
+    height: 40px;
+    width: 100%;
+    padding: 3px 13px 3px 3px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.header-top-options{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+.notification,
+.support{
+    height: 100%;
+    min-width: fit-content;
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+    /* margin: 0 5px; */
+    /* padding: 3px; */
+}
+.notification-button,
+.support-button {
+    height: 100%;
+    width: max-content;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 5px;
+    padding: 0 5px;
+    color: #fff;
+    cursor: pointer;
+}
+.notification-button:hover,
+.support-button:hover {
+    opacity: 0.8;
+}
+.notification-button ion-icon,
+.support-button ion-icon{
+    font-size: 18px;
+    margin-right: 5px;
+}
+.account{
+    height: 100%;
+    width: max-content;
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+    padding: 5px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+.account:hover{
+    opacity: 0.8;
+}
+.acount-img{
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.acount-img img{
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    padding: 2px;
+}
+.account-name{
+    margin-left: 5px;
+    color: #fff;
+}
+.header-search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+.header-search-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+.search-input{
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.input-bar{
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+    width: 100%;
+    height: 40px;
+    position: relative;
+    padding: 3px;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+.input-bar-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+}
+.input-content{
+    border: none;
+    width: 100%;
+    outline: none;
+    line-height: 22px;
+    vertical-align: middle;
+}
+.button-search-wrapper{
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border: none;
+    background-color: #ff5e00;
+    height: 100%;
+    width: 50px;
+    cursor: pointer;
+    border-radius: 3px;
+    color: #fff;
+}
+.search-button:hover{
+    background-color: #ee5000;
+}
+.search-button ion-icon{
+    font-size: 20px;
+}
+.header-cart{
+    height: 100%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.heaeder-cart-wrapper{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.cart-button{
+    background-color: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 12px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.cart-button:hover{
+    opacity: 0.8;
+}
+.cart-button ion-icon{
+    font-size: 36px;
+    color: #fff;
+}
+.search-suggest{
+    display: flex;
+    align-items: center;
+    /* justify-content: space-around; */
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.search-suggest::-webkit-scrollbar{
+    height: 0;
+}
+.search-suggest div{
+    color: #fff;
+    margin: 0 10px;
+    font-size: 12px;
+    font-weight: normal;
+    cursor: pointer;
+    min-width: max-content;
+}
+.search-suggest div:first-child{
+    margin-left: 0;
+}
+.search-suggest div:hover{
+    opacity: 0.8;
+}
+
 .container{
     display: flex;
+    height: 100%;
+    width: 100%;
+    margin-top: 110px;
+    /* background-color: #fff; */
 }
 
 .container__sanpham {
-    /* margin: 50px ; */
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
 }
 
-.container__sanpham h1{
-    margin-top: 20px;
-}
+/* .container__sanpham h1{
+    margin: 0;
+    padding: 20px;
+    font-size: 18px;
+} */
 
-/* Định kiểu cho container chứa sản phẩm */
+/* Định kiểu cho phần tử cha chứa các container sản phẩm */
+.parent__container {
+    text-align: center; 
+    width: 100%; 
+    background-color: #e27000;
+    display: flex;
+    flex-wrap: wrap;
+}
 .container__danhmucsanpham {
     position: relative;
-    display: inline-block; /* Hiển thị các container cạnh nhau theo chiều ngang */
-    margin: 10px; /* Tạo khoảng cách xung quanh container */
-    border: 5px solid #f3f0f0; /* Tạo viền xung quanh container */
-    padding: 10px; /* Tạo khoảng cách giữa viền và nội dung bên trong */
-    text-align: center; /* Căn giữa nội dung bên trong container */
-    vertical-align: top; /* Căn đỉnh các container khi hiển thị cạnh nhau */
-    width: 250px; /* Chiều rộng cố định cho container */
-    height: 350px; /* Chiều cao cố định cho container */
-    box-sizing: border-box; /* Đảm bảo padding và border không làm tăng kích thước tổng thể */
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ffffff;
+    margin: 10px;
+    width: calc((100% / 5) - 20px);
+    height: 500px;
+    box-sizing: border-box; 
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: .3s;
 }
+.container__danhmucsanpham:hover {
+    margin-top: -5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.container__danhmucsanpham img {
+    min-height: 400px;
+    object-fit: cover;
+}
+.container__danhmucsanpham h1 {
+    margin-bottom: 40px;
+    font-size: 16px;
+}
+.container__danhmucsanpham h2 {
+    padding: 10px;
+    font-size: 16px;
+}
+
 .info-top-left, .info-top-right {
     position: absolute;
     bottom: 10px;
@@ -41,24 +384,6 @@
 }
 
 
-/* Định kiểu cho ảnh sản phẩm */
-.container__danhmucsanpham img {
-    width: 100%; /* Chiều rộng của ảnh bằng 100% chiều rộng của container */
-    height: 200px; /* Chiều cao cố định của ảnh */
-    object-fit: cover; /* Đảm bảo ảnh phủ đầy khung hình mà không làm thay đổi tỷ lệ của nó */
-    border: 1px solid #000; /* Tạo viền xung quanh ảnh */
-    display: block; /* Hiển thị ảnh dưới dạng khối */
-    margin: 0 auto 10px; /* Tạo khoảng cách dưới ảnh */
-    transition: transform 0.3s ease; /* Tạo hiệu ứng chuyển đổi khi thay đổi kích thước ảnh */
-}
-
-/* Hiệu ứng khi di chuột vào ảnh */
-.container__danhmucsanpham img:hover {
-    transform: scale(1.05); /* Phóng to ảnh khi di chuột vào */
-    cursor: pointer; /* Thay đổi con trỏ chuột thành hình dạng nút nhấn */
-    border-color: goldenrod; /* Thay đổi màu viền của ảnh */
-}
-
 .container__danhmucsanpham__tadon {
     margin-top: 50px;
     height: 115px;
@@ -69,9 +394,16 @@
     align-items: center;
 }
 
-/* Định kiểu cho phần tử cha chứa các container sản phẩm */
-.parent__container {
-    text-align: center; /* Căn giữa nội dung bên trong phần tử cha */
-    width: 100%; /* Chiều rộng phần tử cha chiếm toàn bộ chiều rộng của phần tử chứa nó */
-    background-color: rgb(35, 35, 35); /* Màu nền cho phần tử cha */
+
+@media screen and (max-width: 1024px) {
+    .container__danhmucsanpham {
+        width: calc((100% / 3) - 20px);
+        height: 380px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .container__danhmucsanpham {
+        width: calc((100% / 2) - 20px);
+        height: 380px;
+    }
 }
