--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2276,6 +2276,7 @@ body {
 }
 .chat-box {
     position: fixed;
+    /* display: flex; */
     display: none;
     align-items: flex-end;
     justify-content: flex-end;
@@ -2417,7 +2418,7 @@ body {
 
 .chat-log {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     overflow-y: scroll;
