--- a/public/navigation_css/wheyshop.css
+++ b/public/navigation_css/wheyshop.css
@@ -9,18 +9,23 @@
     padding: 0;
     -webkit-tap-highlight-color: transparent !important;
 }
-html::-webkit-scrollbar{
+/* html::-webkit-scrollbar{
     width: 0;
-}
+} */
 .container{
     height: 100%;
-    width: 100vw;
+    width: 100%;
+}
+.container-wrapper{
+    margin: 0 auto;
+    height: 100%;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
     background-color: rgb(0, 160, 255, 0.03);
-    overflow-x: auto;
+    /* overflow-x: auto; */
 }
 
 .header{
@@ -102,6 +107,7 @@ html::-webkit-scrollbar{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 }
 
 .header-search{
@@ -174,7 +180,6 @@ html::-webkit-scrollbar{
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    margin-left: 10px;
 }
 .header-options .active{
     color: rgb(0, 160, 255);
@@ -245,7 +250,6 @@ html::-webkit-scrollbar{
     text-align: center;
     flex-shrink: 0;
     border-radius: 50%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 .home-button:hover,
 .account-button:hover{
@@ -292,7 +296,9 @@ html::-webkit-scrollbar{
 .viral-search-wrapper button:first-child{
     margin-left: 0;
 }
-
+.address.two{
+    display: none;
+}
 .address{
     height: 100%;
     width: fit-content;
@@ -376,7 +382,7 @@ html::-webkit-scrollbar{
 }
 .slider-item{
     height: 360px;
-    width: calc(50% - 5px);
+    width: calc(50% - 8px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -472,10 +478,10 @@ html::-webkit-scrollbar{
     text-align: start;
 }
 .product-title h1{
-    font-family: Varela Round;
-    text-transform: uppercase;
+    /* font-family: Varela Round; */
+    /* text-transform: uppercase; */
+    font-weight: 500;
     font-size: 18px;
-    font-weight: 600;
     margin: 0;
 }
 .list-item{
@@ -489,16 +495,17 @@ html::-webkit-scrollbar{
     overflow: hidden;
 }
 .item{
-    width: calc((100% / 5) - 12px);
+    width: calc((100% / 6) - 10px);
     /* margin: 5px; */
     border-radius: 8px;
     /* border: 1px solid rgba(121, 121, 121, 0.1); */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
     overflow: hidden;
     text-decoration: none;
-    transition: .2s;
+    /* transition: .2s; */
 }
 .item:hover{
+    transition: .2s;
     transform: translateY(-5px);
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.12);
 }
@@ -551,7 +558,7 @@ html::-webkit-scrollbar{
     justify-content: center;
     align-items: center;
     height: fit-content;
-    padding: 3px 5px 3px 4px;
+    padding: 2px 4px;
     border-radius: 50rem;
     background-color: rgb(0, 160, 255, 0.1);
 
@@ -573,6 +580,7 @@ html::-webkit-scrollbar{
     color: rgb(0, 100, 255);
     line-height: 17px;
     vertical-align: middle;
+    white-space: nowrap;
 }
 /* .auth-img{
     height: fit-content;
@@ -583,15 +591,61 @@ html::-webkit-scrollbar{
 } */
 
 .star{
+    height: 13px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: gold;
+    gap: 2px;
+}
+.star-icon{
+    height: 100%;
+    width: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: gold;
+}
+.star i{
+    font-size: 12px;
 }
 .name{
-    height: fit-content;
+    height: 40px;
     width: 100%;
     color: #000;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.name span{
+    height: fit-content;
+    width: 100%;
+    font-size: 12px;
+    line-height: 18px;
+    vertical-align: middle;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+}
+
+.cost{
+    height: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-size: 16px;
+    color: #000;
+    font-family: Varela Round;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.03);
+}
+.cost span{
+    position: relative;
+    bottom: 5px;
+    right: -3px;
+    font-size: 12px;
 }
 .brand-ship{
     height: 100%;
@@ -604,4 +658,117 @@ html::-webkit-scrollbar{
 }
 .brand img{
     height: 12px;
+}
+
+
+
+@media only screen and (max-width: 1024px) {
+    .header-wrapper{
+        max-width: 100%;
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0 16px;
+        gap: 10px;
+    }
+    .header-logo{
+        height: 21px;
+        flex-direction: row;
+        gap: 10px;
+    }
+    .logo-img{
+        height: 100%;
+    }
+    .logo-img img{
+        height: 100%;
+    }
+    .header-content{
+        margin: 0;
+        width: 100%;
+    }
+    .search-button{
+        display: none;
+    }
+    .address.two{
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: #fff;
+        margin: 0;
+        padding: 16px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
+    }
+    .address-two-wrapper{
+        height: 100%;
+        width: fit-content;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .header-bot,
+    .home,
+    .account{
+        display: none;
+    }
+    .main-content{
+        padding: 0 10px;
+    }
+    .main-content-wrapper{
+        width: 100%;
+    }
+    .list-item{
+        flex-wrap: wrap;
+        gap: 15px;
+    }
+    .item{
+        width: calc((100% / 3) - 15px);
+    }
+}
+@media only screen and (max-width: 768px) {
+    .slider-item{
+        width: 100%;
+    }
+    .slider-item:last-child{
+        display: none;
+    }
+    .address-wrapper{
+        width: 100%;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+    }
+    .list-products{
+        height: fit-content;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 16px;
+    }
+    .product{
+        height: 150px;
+        width: calc((100% / 2) - 8px);
+    }
+    .product-title{
+        padding: 16px 16px 0 16px;
+    }
+    .product-name span{
+        font-size: 16px;
+    }
+    .list-item{
+        flex-wrap: wrap;
+        gap: 16px;
+    }
+    .item{
+        width: calc((100% / 2) - 8px);
+    }
+    .item-information-wrapper{
+        gap: 12px;
+    }
+    .brand-ship{
+        padding: 0 10px 5px 10px;
+    }
 }
