--- a/public/navigation_css/login.css
+++ b/public/navigation_css/login.css
@@ -36,6 +36,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 100%;
     z-index: 1;
     background-color: #aaaaaab9;
+    /* background-color: #fefefe; */
 }
 
 
@@ -48,18 +49,27 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     /* max-width: 600px; */
     padding: 40px;
     /* transform: translate(-50%, -55%); */
-    background: rgba(0, 0, 0, .9);
+    background: #fff;
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+    box-shadow: 10px 10px 80px rgba(0, 0, 0, .1);
     border-radius: 10px;
+    gap: 10px;
 }
 
-.modal__body__box--admin{
+.modal__body__box.login-box form{
+    margin-bottom: 10px;
+}
+
+.modal__body__box.loader {
+    background: transparent;
+}
+
+.modal__body__box--admin {
     background-color: #fff;
 }
 
 
-.admin-edit-account{
+.admin-edit-account {
     width: 600px;
 }
 
@@ -70,10 +80,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .modal__body__box p:first-child {
     margin: 0 0 30px;
     padding: 0;
-    color: #fff;
+    color: #000;
     text-align: center;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: normal;
     letter-spacing: 1px;
 }
 
@@ -85,10 +95,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #000;
     margin-bottom: 30px;
     border: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #000;
     outline: none;
     background: transparent;
 }
@@ -99,7 +109,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     left: 0;
     padding: 10px 0;
     font-size: 12px;
-    color: #fff;
+    color: #000;
     pointer-events: none;
     transition: .5s;
 }
@@ -110,19 +120,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     left: 0;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #000;
     pointer-events: none;
     transition: .5s;
+    top: -28px;
 }
 
 
-.modal__body__box .user-box input:focus~label,
+/* .modal__body__box .user-box input:focus~label,
 .modal__body__box .user-box input:valid~label {
-    top: -20px;
     left: 0;
-    color: #fff;
-    font-size: 12px;
-}
+    color: #000;
+    font-size: 14px;
+} */
 
 .modal__body__box form button {
     position: relative;
@@ -131,23 +141,30 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-weight: bold;
     margin-top: 8px;
     font-size: 16px;
+    font-weight: 600;
     text-decoration: none;
-    text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
     letter-spacing: 3px;
-    background-color: transparent;
+    background-color: #fff;
+    border: unset;
+    cursor: pointer;
 }
 
 .modal__body__box button:hover {
     background: #fff;
     color: #272727;
     border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
 .modal__body__box button span {
     position: absolute;
     display: block;
+}
+
+.modal__body__box button span{
+    background-color: rgba(255, 0, 0, 0.1) !important;
 }
 
 .modal__body__box button span:nth-child(1) {
@@ -219,7 +236,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 100%;
     background: linear-gradient(360deg, transparent, #fff);
     animation: btn-anim4 1.5s linear infinite;
-    animation-delay: 1.125s
+    animation-delay: 1.125s;
 }
 
 @keyframes btn-anim4 {
@@ -239,15 +256,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .create__account__text {
-    color: #aaa;
+    color: #555;
     font-size: 14px;
-    cursor: pointer;
 }
 
 
 .modal__body__box span.a2 {
-    color: #fff;
+    color: #000;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .modal__body__box span.a2:hover {
@@ -624,7 +641,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-top: 1px rgba(0, 0, 0, 0.05) solid;
 }
 
 .row__final__button {
@@ -644,19 +660,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 button.button__form {
+    margin: 0 !important;
+    padding: 8px 12px !important;
     background-color: white;
     border-radius: 8px;
-    /* border: 1px rgba(0, 0, 0, 0.1) solid; */
-    border: none;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    border: 1px solid #99999922 !important;
     padding: 4px 8px;
     color: rgba(0, 0, 0, 1);
 }
 
 button.button__form:hover {
     color: rgba(0, 0, 0, 0.8);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    /* border: 1px rgba(0, 0, 0, 0.15) solid; */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 button.button__form:active {
@@ -703,10 +718,13 @@ div#training-schedule {
     align-items: flex-start;
     min-height: 40px;
     width: 100%;
-    font-size: 14px;
+    display: grid;
+    grid-template-columns: 180px 1fr;
+    grid-template-rows: 40px;
+    /* gap: 10px; */
 }
 
-.row__note{
+.row__note {
     display: flex;
     justify-content: center;
     color: chocolate;
@@ -715,13 +733,17 @@ div#training-schedule {
 }
 
 .row__title {
-    /* margin-right: 10px; */
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     min-width: fit-content;
     width: 100%;
     line-height: 18px;
     font-size: 18px;
-    color: #030303;
-    margin: 10px;
+    color: #000;
+    font-weight: lighter;
 }
 
 .row__content {
@@ -732,12 +754,25 @@ div#training-schedule {
     flex-wrap: wrap;
     height: 100%;
     width: 100%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
+    /* background-color: #eee; */
+    /* border: 1px solid #99999922; */
+    /* border-radius: 8px; */
     overflow: hidden;
 }
-
-.row__content__flex{
+.row-content-wrapper{
+    width: 100%;
+    display: flex;
+    padding: 10px 0 10px 10px;
+    align-items: center;
+    justify-content: space-between;
+}
+.row-content-wrapper div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 3px;
+}
+.row__content__flex {
     display: inline-flex;
 }
 
@@ -754,30 +789,33 @@ div#training-schedule {
 .row__content__input {
     outline: none;
     border: 0;
-    color: rgba(0, 0, 0, 0.5);
+    color: #000;
     flex: 1;
     font-size: 18px;
     /* max-width: 200px; */
     width: 100%;
-    box-sizing: border-box;
-    padding: 10px 10px 8px 10px;
+    background-color: transparent;
+    padding: 10px;
+    /* padding: 10px 10px 8px 10px; */
+}
+.row__content__input::placeholder{
+    color: #99999955;
 }
 
-
-.row__edit{
+.row__edit {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-top: 12px;
 }
 
-.row__remove{
+.row__remove {
     display: flex;
     margin-top: 12px;
     flex-direction: row;
 }
 
-.row__content__edit{
+.row__content__edit {
     display: flex;
     align-items: center;
     /* flex: 1; */
@@ -786,18 +824,18 @@ div#training-schedule {
 }
 
 /* .row__content__edit input, */
-.row__content__edit span{
-   width: 50%;
-   max-width: none;
+.row__content__edit span {
+    width: 50%;
+    max-width: none;
 }
 
-.row__content__edit i{
+.row__content__edit i {
     padding: 0 8px;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
     filter: invert(0);
-  }
+}
 
 /* .row__title{
 
@@ -808,12 +846,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     z-index: 30;
     padding: 22px;
 }
-.form2{
+
+.form2 {
     /* padding: 14px; */
     /* height: 300px; */
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
+
 .admin-add-account .registration__traning__schedule {
     width: 100%;
     color: #030303;
@@ -822,6 +863,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 
 
-.modal__body--admin{
+.modal__body--admin {
     max-width: 600px;
 }
