--- a/public/navigation_css/wheyshop.css
+++ b/public/navigation_css/wheyshop.css
@@ -13,10 +13,17 @@
 html::-webkit-scrollbar{
     display: none;
 }
+body{
+    background-color: rgb(0, 160, 255, 0.03);
+}
 .container{
     height: 100%;
     width: 100%;
-    background-color: rgb(0, 160, 255, 0.03);
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    gap: 20px;
 }
 .container-wrapper{
     margin: 0 auto;
