--- a/public/navigation_css/login.css
+++ b/public/navigation_css/login.css
@@ -724,6 +724,11 @@ div#training-schedule {
     /* gap: 10px; */
 }
 
+.row__img {
+    display: flex;
+    flex-direction: column;
+}
+
 .row__note {
     display: flex;
     justify-content: center;
@@ -759,6 +764,28 @@ div#training-schedule {
     /* border-radius: 8px; */
     overflow: hidden;
 }
+
+.row__content__picture{
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 8px;
+}
+
+.row__content img{
+    width: 72px;
+}
+.row__content__col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 12px;
+}
+.row__content__col label{
+    font-size: 14px;
+    font-weight: 500;
+    color: #000;
+}
+
 .row-content-wrapper{
     width: 100%;
     display: flex;
