--- a/public/navigation_css/wheyshop.css
+++ b/public/navigation_css/wheyshop.css
@@ -1,3 +1,7 @@
+#toast {
+    top: 100px  !important;
+}
+
 *{
     /* font-family: Arial, Helvetica, sans-serif; */
     /* font-family: Inter,Helvetica,Arial,sans-serif; */
