--- a/public/navigation_css/promotion.css
+++ b/public/navigation_css/promotion.css
@@ -917,7 +917,7 @@ body{
     width: 100%;
     max-width: 500px;
     max-height: 500px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
 
